[tool.poetry]
name = "blaise_restapi"
version = "1.0.2"
description = "Client for calling Blaise RestAPI"
authors = ["Blaise 5 Team"]
packages = [
  { include = "blaise_restapi" }
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
responses = "^0.13.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
